[package]
name = "mcpkit-template-derive"
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
description = "Derive macros for mcpkit-template"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jkindrix/mcpkit"
keywords = ["mcp", "llm", "template", "macro", "derive"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
