[package]
name = "mcpkit-template"
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
description = "Compile-time validated prompt templates for mcpkit-forge"
license = "MIT OR Apache-2.0"
repository = "https://github.com/praxiomlabs/mcpkit"
keywords = ["mcp", "llm", "template", "prompt", "macro"]
categories = ["development-tools", "text-processing"]

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For derive macros
mcpkit-template-derive = { version = "0.5.0", path = "../mcpkit-template-derive", optional = true }

[dev-dependencies]
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }

[features]
default = ["runtime", "derive"]
runtime = []
derive = ["mcpkit-template-derive"]
