[package]
name = "mcpkit-testing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Testing utilities for mcpkit"
repository.workspace = true
keywords = ["mcp", "mcp-protocol", "testing"]
categories = ["development-tools::testing"]

[dependencies]
# Internal crates - path takes precedence locally, version used for publishing
mcpkit-core = { version = "0.2.1", path = "../mcpkit-core" }
mcpkit-transport = { version = "0.2.1", path = "../mcpkit-transport" }
mcpkit-server = { version = "0.2.1", path = "../mcpkit-server" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
futures = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
