[package]
name = "mcpkit-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Transport abstractions for mcpkit"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
mcpkit-core = { version = "0.3.0", path = "../mcpkit-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
pin-project-lite = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }

# Runtime-specific dependencies
tokio = { version = "1", features = ["io-util", "io-std", "sync", "rt", "net", "time", "process"], optional = true }
smol = { version = "2", optional = true }
async-io = { version = "2", optional = true }

# Runtime-agnostic sync primitives
async-lock = "3.4"
event-listener = "5"

# HTTP transport
reqwest = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }

# WebSocket transport
tokio-tungstenite = { workspace = true, optional = true }

# Utilities
uuid = { workspace = true }
url = { workspace = true }

# OpenTelemetry integration (optional)
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

# Prometheus metrics (optional)
prometheus = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[features]
default = ["tokio-runtime"]
tokio-runtime = ["tokio"]
smol-runtime = ["smol", "async-io"]
http = ["reqwest", "axum", "hyper", "tokio-runtime"]
websocket = ["tokio-tungstenite", "tokio-runtime"]
opentelemetry = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry", "dep:tracing-subscriber", "tokio-runtime"]
prometheus = ["dep:prometheus"]
full = ["http", "websocket", "opentelemetry", "prometheus"]

# Deprecated feature aliases for backwards compatibility
# These map to smol-runtime since async-std was replaced by smol
async-std = ["smol-runtime"]
async-std-runtime = ["smol-runtime"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-machete]
# async-io: used conditionally in smol runtime
# hyper: used internally by axum for HTTP transport
# pin-project-lite: used for pin projection in async code
ignored = ["async-io", "hyper", "pin-project-lite"]
