[package]
name = "mcpkit-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Transport abstractions for mcpkit"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
mcpkit-core = { version = "0.6.0", path = "../mcpkit-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
pin-project-lite = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Runtime-specific dependencies
tokio = { version = "1", features = ["io-util", "io-std", "sync", "rt", "net", "time", "process"], optional = true }
smol = { version = "2", optional = true }
async-io = { version = "2", optional = true }

# Runtime-agnostic sync primitives
async-lock = "3.4"
event-listener = "5"

# HTTP transport
reqwest = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }

# WebSocket transport
tokio-tungstenite = { workspace = true, optional = true }

# gRPC transport
tonic = { version = "0.12", optional = true, features = ["tls", "channel", "codegen"] }
prost = { version = "0.13", optional = true }
tokio-stream = { version = "0.1", optional = true }

# Utilities
uuid = { workspace = true }
url = { workspace = true }
rand = { workspace = true }

# OpenTelemetry integration (optional)
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

# Prometheus metrics (optional)
prometheus = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"

[build-dependencies]
# These are only needed for regenerating proto code (development use)
tonic-build = { version = "0.12", optional = true }
prost-build = { version = "0.13", optional = true }
protobuf-src = { version = "2", optional = true }

[features]
default = ["tokio-runtime"]
tokio-runtime = ["tokio"]
smol-runtime = ["smol", "async-io"]
http = ["reqwest", "axum", "hyper", "tokio-runtime"]
websocket = ["tokio-tungstenite", "tokio-runtime"]
# gRPC transport - uses pre-generated protobuf code for cross-platform builds
grpc = ["tonic", "prost", "tokio-stream", "tokio-runtime"]
# Feature for regenerating protobuf code (requires protoc or protobuf-src)
# Use: cargo build -p mcpkit-transport --features grpc,regenerate-proto
regenerate-proto = ["grpc", "tonic-build", "prost-build", "protobuf-src"]
opentelemetry = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry", "dep:tracing-subscriber", "tokio-runtime"]
prometheus = ["dep:prometheus"]
full = ["http", "websocket", "grpc", "opentelemetry", "prometheus"]

# Deprecated feature aliases for backwards compatibility
# These map to smol-runtime since async-std was replaced by smol
async-std = ["smol-runtime"]
async-std-runtime = ["smol-runtime"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-machete]
# async-io: used conditionally in smol runtime
# hyper: used internally by axum for HTTP transport
# pin-project-lite: used for pin projection in async code
# prost: used by generated protobuf code (tonic-build)
ignored = ["async-io", "hyper", "pin-project-lite", "prost"]
